# Crazyfly_RL_simulation

./: .gitignore  README.md  requirements.txt
code/: RLEnvironment.py  data_handling.py  multiple_runs.py  plot.py  test.py  test_RL.py  train.py  train_DDPG.py  train_PPO.py  train_SAC.py  train_TD3.py
implementation_test_data/: obs_log_2025-01-15 15:43:09.txt  obs_log_2025-01-15 15:47:09.txt  obs_log_2025-01-15 15:48:22.txt  obs_log_2025-01-15 15:49:05.txt  obs_log_2025-01-15 15:49:50.txt  obs_log_2025-01-15 15:50:55.txt  obs_log_2025-01-15 15:51:50.txt  obs_log_2025-01-15 15:52:33.txt  obs_log_2025-01-15 15:53:25.txt  obs_log_2025-01-15 15:55:52.txt  obs_log_filterd_2025-01-15 15:43:09.txt  obs_log_filterd_2025-01-15 15:47:09.txt  obs_log_filterd_2025-01-15 15:48:22.txt  obs_log_filterd_2025-01-15 15:49:05.txt  obs_log_filterd_2025-01-15 15:49:50.txt  obs_log_filterd_2025-01-15 15:50:55.txt  obs_log_filterd_2025-01-15 15:51:50.txt  obs_log_filterd_2025-01-15 15:52:33.txt  obs_log_filterd_2025-01-15 15:53:25.txt  obs_log_filterd_2025-01-15 15:55:52.txt
recourses/Room_big/: CMakeLists.txt  package.xml
recourses/Room_big/launch/: display.launch  gazebo.launch
recourses/Room_big/meshes/: Wall_l2.STL  Wall_l4.STL  Wall_s3.STL  wall_s1.STL
recourses/Room_big/urdf/: Room_big.csv  Room_big.urdf
results/: README.md
test_data/: obs_log_2024-12-13 19:25:01.txt  obs_log_2024-12-13 19:29:10.txt  obs_log_2024-12-13 19:29:54.txt  obs_log_2024-12-13 19:31:03.txt  obs_log_2024-12-16 19:04:08.txt  obs_log_2024-12-16 19:08:53.txt  obs_log_2024-12-16 19:55:48.txt  (+151 more)
(+272 files in other folders)
